# UniversalUI

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  main.cpp
Core/include/: UniversalUI.h
Core/source/: UniversalUI.cpp
Rendering/include/: uRenderManager.h
Rendering/source/: uRenderManager.cpp
Test/: main.cpp
UniversalUI-Test/: Cargo.toml
UniversalUI-Test/src/: main.rs
Windowing/include/: uWindow.h  uWindowManager.h
Windowing/source/: uWindowManager.cpp
include/OSC/: oscMessage.h  oscSubmodule.h
include/UniversalUI/: UniversalUI.h
include/UniversalUI/Application/: uApplication.h
include/UniversalUI/Base/: Geometry.h
include/UniversalUI/Core/: Geometry.h
include/UniversalUI/Misc/: Geometry.h  Types.h
include/UniversalUI/Native/: nWindow.h
include/UniversalUI/Native/win/: winWindow.h
include/UniversalUI/Window/: uWindow.h  uWindowHandle.h
include/UniversalUI/Windowing/: uWindow.h
src/: UniversalUI.cpp  uApplication.cpp  uWindow.cpp
test/: main.cpp
universalui/: Cargo.toml
universalui/src/: lib.rs
universalui_graphics/: Cargo.toml
universalui_graphics/src/: lib.rs
universalui_system/: Cargo.toml
universalui_system/src/: lib.rs  window.rs  windowManager.rs
universalui_system/src/win32/: events.rs  mod.rs  window.rs
universalui_test/src/: main.rs
