[package]
name = "UniversalUI-Test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = { version = "^1.4", features = ["enable-glwindow"] }
fltk-theme = "^0.7"
glow = "0.13.0"
nalgebra = "0.32.3"
rfd = "0.12.1"
tobj = "4.0.0"
